[gd_scene load_steps=5 format=3 uid="uid://b7seg63qh5rll"]

[ext_resource type="Texture2D" uid="uid://dv8y1ya0wq2t6" path="res://assets/backgrounds/black.png" id="1"]
[ext_resource type="Texture2D" uid="uid://2sewd8gn7u75" path="res://assets/ships/enemyRed1.png" id="2"]
[ext_resource type="Texture2D" uid="uid://bqkrge4lxk6dy" path="res://assets/ships/playerShip1_blue.png" id="3"]
[ext_resource type="Script" path="res://Menu.gd" id="4"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("4")

[node name="Background" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 720.0
texture = ExtResource("1")
expand_mode = 1
stretch_mode = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 2
anchor_top = 1.0
anchor_bottom = 1.0
offset_left = 30.0
offset_top = -136.0
offset_right = 165.0
offset_bottom = -35.0
grow_vertical = 0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start"

[node name="Controls" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Controls"

[node name="Exit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Exit"

[node name="Ships" type="Node2D" parent="."]

[node name="PlayerSprite" type="Sprite2D" parent="Ships"]
position = Vector2(643, 538)
texture = ExtResource("3")

[node name="EnemySprite" type="Sprite2D" parent="Ships"]
position = Vector2(383, 160)
texture = ExtResource("2")

[node name="EnemySprite2" type="Sprite2D" parent="Ships"]
position = Vector2(876, 335)
texture = ExtResource("2")

[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/Controls" to="." method="_on_Controls_pressed"]
[connection signal="pressed" from="VBoxContainer/Exit" to="." method="_on_Exit_pressed"]
